0609_수업 내용(게시판 댓글, 답글..)

--- a/mywork2/src/main/webapp/css/style.css
+++ b/mywork2/src/main/webapp/css/style.css
@@ -15,7 +15,7 @@ body *>a, body *>input {
 }
 
 div#container{
-	background-color:#F0F0F0;
+	/* background-color:#F0F0F0; */
 	width:100%;
 	margin:0 auto;
 }
