20230613_ajax, gson이용해서 id 중복 체크, 전체 회원 조회(index.jsp)

--- a/mywork2/src/main/webapp/css/style.css
+++ b/mywork2/src/main/webapp/css/style.css
@@ -97,3 +97,8 @@ section#memberList-container {text-align:center;}
     
 section#memberList-container table#tbl-member {width:100%; border:1px solid gray; border-collapse:collapse;}
 section#memberList-container table#tbl-member th, table#tbl-member td {border:1px solid gray; padding:10px; }
+
+section#content {
+	width: 100%;
+	margin:0 auto;
+}
