--- a/spring/src/main/webapp/resources/css/style.css
+++ b/spring/src/main/webapp/resources/css/style.css
@@ -31,3 +31,6 @@ div#demo-container{
 		border:1px solid lightgray;
 		border-radius:10px;
 	}
+	
+div#enroll-container{width:400px; margin:0 auto; text-align:center;}
+div#enroll-container input, div#enroll-container select {margin-bottom:10px;}
